# Compress

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  run.sh
Other/: Makefile
inc/: Server.hpp  compress.hpp
src/: Server.cpp  main.cpp  parcer.cpp  response.cpp
